chore(E18S02): spotless:apply + remove unused imports [staging]
Activates Spotless 2.44.3 + google-java-format 1.19.2 (AOSP style) in parent POM
via pluginManagement + build/plugins inheritance. Runs one atomic spotless:apply
across all 5 modules: 350 files reformatted, unused imports removed.

DEC-30: project-wide formatting enforcement + unused-import removal.
DEC-22: reformat is non-semantic; no new failing test required.
DEC-10: version properties declared in parent POM.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>